Arrumando a URL das imagens

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Base Rio
 			</div>
 		</div>
 		<div class="column">
-			<img src="/images/base-sampa-rafa.jpg" alt="Base Sampa">
+			<img src="{{ site.baseurl }}/images/base-sampa-rafa.jpg" alt="Base Sampa">
 		</div>
 	</div>
 </header>
@@ -46,7 +46,7 @@ title: Base Rio
 <div class="container">
 	<div class="columns">
 		<div>
-			<img src="/images/ubuntu.jpg" alt="Sheep">
+			<img src="{{ site.baseurl }}/images/ubuntu.jpg" alt="Sheep">
 		</div>
 		<div>
 			<h2 class="editable">Qual é seu legado?</h2>
