--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 title: The Sheep Vote
-header_background_image: https://source.unsplash.com/0U_gjae2TKo/1880x1240?a=.png
+header_background_image: https://images.unsplash.com/photo-1602984338060-bfddce132ebc
 permalink: /404.html
 ---
 <header style="background-image: url({% include relative-src.html src=page.header_background_image %});">
 	<hr>
 	<div class="container">
-		<h1 class="editable">Página não encontrada</h1>
-		<p class="editable">A página que você tentou acessar não está disponível ou não existe.</p>
+		<h1 class="text-error">Página não encontrada</h1>
+		<p class="text-error">A página que você tentou acessar não está disponível ou não existe.</p>
 		<div class="button">
-			<a href="/">Voltar</a>
+			<a href="{{ site.baseurl }}">Voltar</a>
 		</div>
 	</div>
 </header>
