Autalizando título da página 404

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Sheep Vote
+title: Erro 404
 header_background_image: https://images.unsplash.com/photo-1602984338060-bfddce132ebc
 permalink: /404.html
 ---
