Adicionando comentário pra melhorar a leitura do código

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ title: Base Rio
   							{% when '12' %}<p class="date">{{ post.date | date: "%-d Dezembro, %Y" }}</p>
 						{% endcase %}
 						<h3>{{ post.title }}</h3>
-
+						<!-- Whitespace added for readability -->
 						{{ post.content }}
 					</div>
 				</div>
